--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -99,9 +99,11 @@
   color: #555;
 }
 .dropdownbody {
-  padding: 22px 15px;
+  padding: 22px 0px;
 }
 .signindropdown {
+  width: calc(100% - 32px);
+  margin: 0 auto;
   border: 1px solid #eaeaea;
   border-radius: 8px;
 }
@@ -140,10 +142,31 @@
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
 }
+.dropdownmainbody ul hr {
+  border: 1px solid #eaeaea;
+}
+.dropdownmainbody ul li {
+  color: #000000;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0px 22px;
+  font-family: Inter;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 19.36px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+}
+.dropdownmainbody ul li svg {
+  height: 12px;
+  width: 15px;
+  color: #707070;
+}
 @keyframes dropdownOpen {
   from {
     transform: translateY(-100%);
-    opacity: 0;
   }
   to {
     transform: translateY(0);
@@ -158,7 +181,6 @@
   }
   to {
     transform: translateY(-100%);
-    opacity: 0;
   }
 }
 
