--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -164,6 +164,46 @@
   width: 15px;
   color: #707070;
 }
+.logindropdowndesktop {
+  position: absolute;
+  top: 68px;
+  right: 60px;
+  width: 220px;
+}
+.logindropdowndesktop .signindropdown {
+  border: none !important;
+  border-radius: 4px;
+  overflow: hidden;
+  box-shadow: 0px 3.39px 26.26px 0px #0000001f;
+}
+.logindropdowndesktop .signindropdown hr {
+  width: 80%;
+}
+.logindropdowndesktop .signindropdownelement {
+  padding: 10px;
+
+  background-color: #ffffff;
+}
+.logindropdowndesktop .sigindropdownelementleft h3 {
+  font-family: Inter;
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 15.73px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+}
+.logindropdowndesktop .sigindropdownelementright p {
+  font-family: Inter;
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 15.73px;
+  text-align: left;
+  text-decoration-line: underline;
+  text-decoration-style: solid;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+}
 @keyframes dropdownOpen {
   from {
     transform: translateY(-100%);
@@ -273,5 +313,8 @@
   }
   .dropdown {
     display: flex;
+  }
+  .logindropdowndesktop {
+    display: none;
   }
 }
