--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -14,7 +14,7 @@
   background-color: #fff;
   height: 41px;
   box-shadow: 0px 3.45px 25.88px 0px #00000017;
-
+  border-radius: 7px;
   width: 41px;
   display: flex;
   align-items: center;
