--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -231,7 +231,7 @@
   width: 100%;
   height: 100vh;
   background-color: #ffffff;
-  z-index: 9999;
+  z-index: 99999999;
   display: flex;
   flex-direction: column;
 
