--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -28,6 +28,7 @@
   height: 600px;
   gap: 20px;
   max-width: 1600px;
+  margin: 0 auto;
   padding: 0px 20px 20px 20px;
   justify-content: center;
   overflow: hidden;
